k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetsu19n1101087-game-service
spec:
  type: NodePort
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: tetsu19n1101087-api-service
spec:
  type: NodePort
  selector:
    app: express
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: tetsu19n1101087-db-service
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
