k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetsu19n1101087-game-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: tetsu19n1101087-game.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetsu19n1101087-game-service
                port:
                  number: 80
    - host: api.tetsu19n1101087-game.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetsu19n1101087-api-service
                port:
                  number: 5000
